# embedded-playground

./: .gdbinit  Cargo.toml  README.md
pulseview/: hello_world.pvs  hello_world.sr  led_matrix.pvs  led_matrix.sr
src/: lib.rs  main.rs  numpad.rs  patterns.rs
src/bins/: numpad.rs  pin_tester.rs  temp.rs  writer.rs
