[package]
name = "embedded-playground"
version = "0.1.0"
authors = ["Cxarli <10348289+Cxarli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.3", default_features = false, features = ["unproven"] }
nb = "1.0.0"
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
void = { version = "1.0.2", default_features = false }
max7219 = "0.3.0"
ds18b20 = "0.1.1"
stm32f1xx-hal = { version = "0.7.0", features = ["rt", "stm32f103", "medium"] }
one-wire-bus = "0.1.1"
panic-semihosting = "0.5.6"

[profile.dev]
codegen-units = 1
debug = 0
lto = true

[profile.dev.package."*"]
opt-level = "z"
